# dear-plant

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  celery_config.py  docker-compose.yml  pyproject.toml  requirements.txt  setup_structure.sh  test_setup.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/middleware/: __init__.py  authentication.py  cors.py  error_handling.py  logging.py  rate_limiting.py
app/api/v1/: __init__.py  admin.py  health.py  router.py
app/api/websockets/: __init__.py
app/background_jobs/: __init__.py  celery_app.py
app/modules/: __init__.py
app/modules/ai_smart_features/: __init__.py
app/modules/ai_smart_features/application/: __init__.py
app/modules/ai_smart_features/domain/: __init__.py
app/modules/ai_smart_features/infrastructure/: __init__.py
app/modules/ai_smart_features/presentation/: __init__.py
app/modules/analytics_insights/: __init__.py
app/modules/analytics_insights/application/: __init__.py
app/modules/analytics_insights/domain/: __init__.py
app/modules/analytics_insights/infrastructure/: __init__.py
app/modules/analytics_insights/presentation/: __init__.py
app/modules/care_management/: __init__.py
app/modules/care_management/application/: __init__.py
app/modules/care_management/domain/: __init__.py
app/modules/care_management/infrastructure/: __init__.py
app/modules/care_management/presentation/: __init__.py
app/modules/community_social/: __init__.py
app/modules/community_social/application/: __init__.py
app/modules/community_social/domain/: __init__.py
app/modules/community_social/infrastructure/: __init__.py
app/modules/community_social/presentation/: __init__.py
app/modules/content_management/: __init__.py
app/modules/content_management/application/: __init__.py
app/modules/content_management/domain/: __init__.py
app/modules/content_management/infrastructure/: __init__.py
app/modules/content_management/presentation/: __init__.py
app/modules/growth_tracking/: __init__.py
app/modules/growth_tracking/application/: __init__.py
app/modules/growth_tracking/domain/: __init__.py
app/modules/growth_tracking/infrastructure/: __init__.py
app/modules/growth_tracking/presentation/: __init__.py
app/modules/health_monitoring/: __init__.py
app/modules/health_monitoring/application/: __init__.py
app/modules/health_monitoring/domain/: __init__.py
app/modules/health_monitoring/infrastructure/: __init__.py
app/modules/health_monitoring/presentation/: __init__.py
app/modules/notification_communication/: __init__.py
app/modules/notification_communication/application/: __init__.py
app/modules/notification_communication/domain/: __init__.py
app/modules/notification_communication/infrastructure/: __init__.py
app/modules/notification_communication/presentation/: __init__.py
app/modules/payment_subscription/: __init__.py
app/modules/payment_subscription/application/: __init__.py
app/modules/payment_subscription/domain/: __init__.py
app/modules/payment_subscription/infrastructure/: __init__.py
app/modules/payment_subscription/presentation/: __init__.py
app/modules/plant_management/: __init__.py
app/modules/plant_management/application/: __init__.py
app/modules/plant_management/domain/: __init__.py
app/modules/plant_management/infrastructure/: __init__.py
app/modules/plant_management/presentation/: __init__.py
app/modules/user_management/: __init__.py
app/modules/user_management/application/: __init__.py
app/modules/user_management/application/commands/: __init__.py  auth_commands.py  profile_commands.py  subscription_commands.py  user_commands.py
app/modules/user_management/application/dto/: __init__.py  auth_dto.py  profile_dto.py  subscription_dto.py  user_dto.py
app/modules/user_management/application/handlers/: __init__.py  user_command_handlers.py
app/modules/user_management/application/queries/: __init__.py  analytics_queries.py  profile_queries.py  subscription_queries.py  user_queries.py
app/modules/user_management/domain/: __init__.py
app/modules/user_management/domain/events/: __init__.py  handlers.py  user_events.py
app/modules/user_management/infrastructure/: __init__.py
app/modules/user_management/presentation/: __init__.py
app/modules/weather_environmental/: __init__.py
app/modules/weather_environmental/application/: __init__.py
app/modules/weather_environmental/domain/: __init__.py
app/modules/weather_environmental/infrastructure/: __init__.py
app/modules/weather_environmental/presentation/: __init__.py
app/monitoring/: health_checks.py
app/shared/: __init__.py
app/shared/config/: __init__.py  database.py  redis.py  settings.py  supabase.py
app/shared/core/: __init__.py  circuit_breaker.py  dependencies.py  event_bus.py  exceptions.py  middleware.py  rate_limiter.py  security.py
app/shared/events/: __init__.py  base.py
app/shared/infrastructure/cache/: redis_client.py
app/shared/infrastructure/database/: connection.py  models.py
app/shared/infrastructure/external_apis/: __init__.py  api_client.py  api_rotation.py  circuit_breaker.py
app/shared/infrastructure/storage/: __init__.py  file_manager.py
app/shared/utils/: formatters.py  helpers.py  logging.py  validators.py
docker/: Dockerfile.celery  docker-compose.prod.yml
docker/nginx/: default.conf  nginx.conf
migrations/: env.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard-config.yml
(+16 files in other folders)
